--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,12 +15,11 @@ materialIconsExtended = "1.7.3"
 junit = "4.13.2"
 kotlin = "2.2.0"
 compose = "1.8.3"
-compose-preview = "1.8.3"
-ktor = "3.2.1"
+ktor = "3.2.2"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
 kotlinx-datetime = "0.7.1"
-precompose = "1.6.2"
+precompose = "1.7.0-alpha01" #this verison is compatible with compose
 kamel = "1.0.7"
 koin = "4.1.0"
 multiplatform-settings = "1.3.0"
@@ -43,7 +42,7 @@ androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle
 
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-preview" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version = "1.3.2" }
 compose-material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
